--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natours",
+  "name": "my-fav-videos-server",
   "version": "1.0.0",
   "description": "Learning Node, Express and MongoDB",
   "main": "app.js",
@@ -34,6 +34,8 @@
     "hpp": "^0.2.3",
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "moment-duration-format": "^2.3.2",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
